--- a/srcs/requirements/nginx/nginx.conf
+++ b/srcs/requirements/nginx/nginx.conf
@@ -1,33 +1,47 @@
+worker_processes 1;
+
 events {
 	worker_connections 1024;
 }
 
 http {
-	include /etc/nginx/mime.types;
-	default_type application/octet-stream;
+	include		mime.types;
+	default_type  application/octet-stream;
 
-    server {
-        listen 443 ssl
-        listen [::]:433 ssl
-        server_name mleproux.42.fr
+	server {
+		listen 443 ssl;
+		server_name mleproux.42.fr;
 
-        ssl_protocols TLSv1.2 TLSv1.3;
-        ssl_certificate /etc/nginx/ssl/cert.crt
-        ssl_certificate /etc/nginx/ssl/cert_key.key
+		ssl_protocols TLSv1.2 TLSv1.3;
+		ssl_certificate /etc/nginx/ssl/nginx.crt;
+		ssl_certificate_key /etc/nginx/ssl/nginx.key;
 
-        root var/www/html
-        index index.php index.html index.htm
+		root /var/www/wordpress;
+		index index.php;
 
-        location / {
-            try_files $uri $uri/ =404;
-        }
+		location / {
+			try_files $uri $uri/ /index.php$is_args$args;
+		}
 
-        location ~ [^/]\.php(/|$) {
-            include fastcgi_params;
-            fastcgi_pass wordpress:9000;
-            fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-            fastcgi_index index.php
-        }
-    }
-
+		location ~ \.php$ {
+			include fastcgi_params;
+			fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+			fastcgi_pass wordpress:9000;
+			fastcgi_index index.php;
+		}
+	}
+	server {
+		listen 80;
+		server_name mleproux.42.fr;
+		return 301 https://$host$request_uri;
+	}
+	
 }
+
+
+# location ~ \.php$ {
+#     fastcgi_pass $upstream;
+#     fastcgi_index index.php;
+#     fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+#     include fastcgi_params;
+# }
