--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -1,4 +1,4 @@
-FROM alpine:3.23.2
+FROM alpine:3.22
 
 RUN apk update
 RUN apk add mariadb mariadb-client
@@ -9,3 +9,10 @@ RUN mkdir -p /run/mysqld /var/lib/mysql && \
 RUN mariadb-install-db --user=mysql --datadir=/var/lib/mysql
 
 COPY mariadb-server.cnf /etc/my.cnf.d/mariadb-server.cnf
+
+COPY tools/init_db.sh /init_db.sh
+RUN chmod +x /init_db.sh
+
+EXPOSE 3306
+
+ENTRYPOINT ["/init_db.sh"]
